tests/ui/asm/invalid-repr-simd-on-enum-148634.stderr
error: the `repr(simd)` attribute cannot be used on enums
  --> $DIR/invalid-repr-simd-on-enum-148634.rs:6:3
   |
LL | #[repr(simd)]
   |   ^^^^^^^^^^
   |
   = help: the `repr(simd)` attribute can only be applied to structs

error[E0084]: unsupported representation for zero-variant enum
  --> $DIR/invalid-repr-simd-on-enum-148634.rs:6:8
   |
LL | #[repr(simd)]
   |        ^^^^
...
LL | enum Es {}
   | ------- zero-variant enum

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0084`.
